--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 h1{
 	font-family: Rowdies;
-	font-size: 4.5em;
+	font-size: 80px;
 	color: #125383;
 	margin-bottom: 20px;
 }
@@ -12,7 +12,7 @@ h2{
 
 p{
 	font-family: Recursive;
-	font-size: 1em;
+	font-size: 17px;
 	font-weight: 400
 	color: #125383;
 }
@@ -45,7 +45,7 @@ a{
 }
 
 .card-text{
-   	font-size: 2em;
+   	font-size: 34px;
    	margin-left: 40px;
 }
 
@@ -90,7 +90,7 @@ p .caption{
 }
 
 .caption{
-	margin-top: 200px;
+	margin-top: 120px;
 	left: 50%;
 	text-align: center;
 	bottom: 20px;
@@ -105,7 +105,7 @@ p .caption{
 	font-size: 40px;
 	position: fixed;
 	position: fixed;
-	top: 90%;
+	top: 85%;
 	left: 50%;
 	margin-left: -250px;
 }
